<resources>
    <string name="app_name">Movision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_slogan">Movision</string>
    <string name="tmdb_name">The Movie Database</string>
    <string name="login_guide_text">Grant app the permission to access your account ?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign in</string>
    <string name="login_note">If you have not an account yet. Visit TmDB website for sign up. This app only uses data that i provided by TmDB.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="genres_peeking_content">Choose at least 3 genres that you may be intersted in.</string>
    <string name="add">Confirm</string>
    <string name="remember_me">Remember me</string>
    <string name="see_more">See  more</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="undefined">Undefined</string>
    <string name="login_title">Login to your account</string>
    <string name="login">Login</string>
    <string name="or">or login with other methods</string>
    <string name="create_account">Do not have an account ?</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="create_a_new_account">Create a new account right now !</string>
    <string name="sign_up_title">Create a new account</string>
    <string name="confirm_password">"Confirm password  "</string>
    <string name="proceed">Proceed</string>
    <string name="verify">Verify</string>
    <string name="send_email_again">Send email again</string>


    <!--facebook-->
    <string name="facebook_app_id">1176965566708628</string>
    <string name="fb_login_protocol_scheme">fb1176965566708628</string>
    <string name="facebook_client_token">41d35ff735adb178b1d712d23599ddb5</string>
    <string name="verify_email">Verify your email</string>
    <string name="verify_code_1">We have sent a code to the email</string>
    <string name="verify_code_2">Please check your email type the code</string>
    <string name="send_code">Send again</string>
    <string name="request_code_again">"Try again after : "</string>
    <string name="email_verification">We sent a code to below email. Please check and enter the code.</string>
    <string name="sending">Sending...</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm">Confirm</string>
    <string name="change_password">Change password</string>
    <string name="contact">Contact</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete this account</string>
    <string name="pick_image">Pick an image in gallery</string>
    <string name="take_photo">Take an photo</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="caster">Casters</string>
    <string name="clip">Clips</string>
    <string name="same_movie">Movies like this</string>
    <string name="review">Reviews</string>
    <string name="rate_movie_title">How many stars will you rate this movie ?</string>
    <string name="images">Images</string>
    <string name="casting_movies">Casting movies</string>
    <string name="vote_avarage">Vote avarage range</string>
    <string name="number_votes">Number of Votes</string>
    <string name="to">to</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="discover">Discover</string>
    <string name="searchbar_hint">Search movie with name</string>
    <string name="search_title">Explore Movies, Actors and more…</string>
    <string name="history_empty">There has not been any history recently.</string>
    <string name="movie">Movie</string>
    <string name="people">People</string>
    <string name="lost_connection">Your connection is unavailable</string>
    <string name="searching_history">Searching history</string>
    <string name="clearHistory">Clear</string>
</resources>