<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="architecture.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context="architecture.ui.view.fragment.LoginFragment">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/username_edittext_background"
            android:hint="@string/username_hint"
            android:importantForAutofill="no"
            android:paddingStart="60dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_in_applogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/password_edittext_background"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:paddingStart="60dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            tools:ignore="TextFields" />

        <CheckBox
            android:id="@+id/rememberAccCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:button="@null"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:drawableEnd="@drawable/checkbox_button"
            app:layout_constraintEnd_toStartOf="@+id/rememberMe"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <TextView
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/remember_me"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Custom.ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginTop="42dp"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="105dp"
            android:text="@string/login_text"
            android:textSize="16sp"
            android:visibility="@{viewmodel.shouldHideAuthButton ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberAccCheckBox" />

        <ImageView
            android:id="@+id/loadingImageView"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="105dp"
            android:background="@drawable/loading_imageview_background"
            android:importantForAccessibility="no"
            app:defaultDrawable="@{@drawable/ic_splash_loading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rememberAccCheckBox" />

        <TextView
            android:id="@+id/noteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_note"
            android:textSize="13sp"
            android:alpha="0.5"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/scrimColor"
            android:visibility="@{viewmodel.shouldShowAuthView ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/login_dialog_background"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/tmdbLogoImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/tmdb_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tmdbTextView"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/tmdb_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tmdbLogoImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/guideTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/login_guide_text"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tmdbTextView" />

                <Button
                    android:id="@+id/allowButton"
                    style="@style/Custom.ButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/allow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/denyButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideTextView" />

                <Button
                    android:id="@+id/denyButton"
                    style="@style/Custom.ButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/deny"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/allowButton"
                    app:layout_constraintTop_toBottomOf="@+id/guideTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>