<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/changePasswordSheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/app_background"
            android:elevation="10dp"
            android:orientation="vertical"
            app:behavior_peekHeight="0dp"
            app:behavior_hideable="true"
            app:behavior_draggable="false"
            android:padding="15dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/oldPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/albert_sans_bold"
                android:text="@string/old_password"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/oldPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/sign_up_edittext_background"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/albert_sans_regular"/>

            <TextView
                android:id="@+id/newPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/albert_sans_bold"
                android:text="@string/new_password"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/sign_up_edittext_background"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/albert_sans_regular"/>

            <Button
                android:id="@+id/confirmButton"
                style="@style/Custom.ButtonStyle"
                android:backgroundTint="@color/widget"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/albert_sans_bold"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

